make GoL rules more readable

--- a/life.html
+++ b/life.html
@@ -110,10 +110,10 @@
         <br><br>
         The rules of Conway's Game of Life are pretty simple.
         The grid is infinite (although of course on here the grid's not really infinite) and the number of neighbors determines whether a cell will be alive in the next generation or not.
-        Each cell has 8 neighbors.
-        A live cell with fewer than two live neighbours dies due to underpopulation.
-        A live cell with two or three live neighbours lives on to the next generation.
-        A live cell with more than three live neighbours dies due to overpopulation.
+        Each cell has 8 neighbors.<br>
+        A live cell with fewer than two live neighbours dies due to underpopulation.<br>
+        A live cell with two or three live neighbours lives on to the next generation.<br>
+        A live cell with more than three live neighbours dies due to overpopulation.<br>
         A dead cell with exactly three live neighbours becomes a live cell through reproduction.
         <br><br>
         <button class="clickable" onclick="closeId('howToPlayContainer')">Close</button>
