update How To Play

--- a/hangman.html
+++ b/hangman.html
@@ -115,9 +115,7 @@
             <br><br>
             You can play as both the guesser and the setter.
             Please keep in mind that right now the computer has an extremely limited vocabulary.
-            Alsp, when playing as setter, the computer's guesses are currently just weighted randomness.
-            So you'll probably win.
-            I'm planning on making an actual strategy for the computer later.
+            The computer's strategy will only use the words it knows, so try to make sure the word you choose is in the wordlist.
         </p>
         <br>
         <button class="clickable" onclick="closeId('howToPlayContainer')">Close</button>
