edit about, add contact

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
         <!-- Include JQuery 3.5.1, last updated 6/4/2020 -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="general.css">
-        <link rel="stylesheet" href="clickable.css">
     
         <style>
             body {
@@ -20,22 +19,34 @@
         <div id="navbarContainer"></div>
         <div class="container">
             <h1 id="pageTitle">About the Site</h1>
-            <h3>qpwoeirut.com</h3>
-                <div style="margin-left: 30px;">
-                    <p>qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan</a> and <a href="https://github.com/qpwoeirut">Stanley</a>. 
-                        We are two high school students who are interested in computer science and programming.
-                        The idea for this website started after we finished our previous work with COBOL, an old programming language used for business, finance, and administrative systems.
+            <div class="container">
+                <p>qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan</a> and <a href="https://github.com/qpwoeirut">Stanley</a>. 
+                    We are two high school students who are interested in computer science and programming.
+                    The idea for this website came up during the COVID-19 pandemic, since we needed something to do during lockdown.
+                </p>
+                <p>
+                    We decided to look into JavaScript and HTML and began to work on an arcade-themed website.
+                    Our site offers a selection of simple games to play whenever you want.
+                    We currently have a roster of 6 games: Atari Breakout, Conway's Game of Life, Hangman, Minesweeper, Pong, and Snake.
+                </p>
+                <p>
+                    All of our work is written in JavaScript, HTML, CSS, and XML using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. 
+                    The project repository can be found on GitHub <a href="https://github.com/qpwoeirut/GamesAndGadgets">here</a>.
+                </p>
+                <br><br>
+                <h2 class="center">About Us</h2>
+                <div>
+                    <p>
+                        We met as students in Bowman School and have kept in touch after graduation.
                     </p>
                     <p>
-                        We decided to look into JavaScrip and HTML and began work on an arcade-themed website.
-                        Our site offers a selection of simple games to play whenever you want.
-                        We currently have a roster of 6 games: Atari Breakout, Conway's Game of Life, Hangman, Minesweeper, Pong, and Snake.
+                        Stanley also spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
+                        At time of writing, he has a rating of 2107 of CodeForces (flex). His account is <a href="https://codeforces.com/profile/qpwoeirut">here</a>.
                     </p>
-                    <p>
-                        All of our work is written in JavaScrip, HTML, and CSS using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. 
-                        The project repository can be found on GitHub <a href="https://github.com/qpwoeirut/GamesAndGadgets">here</a>.
-                    </p>
+                    <p>Jonathan will write a bio here.</p>
                 </div>
+            </div>
+        </div>
     </body>
 
     <script>
