added Jonathan's bio

--- a/about.html
+++ b/about.html
@@ -43,7 +43,10 @@
                         Stanley also spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
                         At time of writing, he has a rating of 2107 of CodeForces (flex). His account is <a href="https://codeforces.com/profile/qpwoeirut">here</a>.
                     </p>
-                    <p>Jonathan will write a bio here.</p>
+                    <p>
+                        Jonathan also works on miscellaneous projects in a number of different languages, as well as some computer science contests on CodeForces and other sites.
+                        Most of Jonathan's work can be found on GitHub.
+                    </p>
                 </div>
             </div>
         </div>
