changed homepage layout

--- a/index.html
+++ b/index.html
@@ -20,37 +20,47 @@
 <body>
     <div id="navbarContainer"></div>
     <div class="container">
-        <h1 id="pageTitle">Welcome</h1>
-        <h3>We are planning to create:</h3>
+        <h1 id="pageTitle">Welcome to qpwoeirut.com!</h1>
+        <p style="margin-left: 35px; margin-right: 35px;">
+            Here you can find a selection of fun arcade games to play whenever you want.
+            All of the projects are written using JavaScript and HTML, so there is no need for Adobe Flash Player.
+            If you have any questions or comments for us, see the <a href="contact.html">Contact Us</a> page or visit the <a href="https://github.com/qpwoeirut/GamesAndGadgets">project repository</a> on Github.
+            Feel free to submit an <a href="https://github.com/qpwoeirut/GamesAndGadgets/issues">issue or concern</a> as well.
+        </p>
+        <br>
+        <h3>Our current catalog of games consists of:</h3>
         <ul>
             <li>
-                <p><a href="minesweeper.html">Minesweeper</a> (Finished)</p>
+                <p><a href="minesweeper.html">Minesweeper</a></p>
             </li>
             <li>
-                <p><a href="snake.html">Snake</a> (Functional but Unpolished)</p>
+                <p><a href="snake.html">Snake</a></p>
             </li>
             <li>
-                <p><a href="life.html">Conway's Game of Life</a> (Functional but Unpolished)</p>
+                <p><a href="life.html">Conway's Game of Life</a></p>
             </li>
             <li>
-                <p><a href="pong.html">Pong</a> (Functional but Unpolished)</p>
+                <p><a href="pong.html">Pong</a></p>
             </li>
             <li>
-                <p><a href="hangman.html">Hangman</a> (Functional but Unpolished)</p>
+                <p><a href="hangman.html">Hangman</a></p>
             </li>
             <li>
-                <p><a href="breakout.html">Breakout</a> (Mostly Functional)</p>
+                <p><a href="breakout.html">Breakout</a></p>
             </li>
+            <!-- <li>
+                <p><a href="clicker.html">Semi-Mindless Clicker Game</a> (Unfinished, and left for dead)</p>
+            </li> -->
+        </ul>
+        <br>
+        <h3>In the future, we plan to work on:</h3>
+        <ul>
             <li>
                 <p>Quadratic Solver</p>
             </li>
-            <li>
-                <p><a href="clicker.html">Semi-Mindless Clicker Game</a> (Unfinished, and left for dead)</p>
-            </li>
         </ul>
         <br>
-        <p>This page is mostly a placeholder for our home page. Once we've finished some games and other cool stuff,
-            we'll spruce this up a bit.</p>
+       
     </div>
 </body>
 <script>
