--- a/about.html
+++ b/about.html
@@ -20,7 +20,8 @@
         <div class="container">
             <h1 id="pageTitle">About the Site</h1>
             <div class="container">
-                <p>qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan</a> and <a href="https://github.com/qpwoeirut">Stanley</a>. 
+                <p>
+                    qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan</a> and <a href="https://github.com/qpwoeirut">Stanley</a>. 
                     We are two high school students who are interested in computer science and programming.
                     The idea for this website came up during the COVID-19 pandemic, since we needed something to do during lockdown.
                 </p>
