added breakout and snake images

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 </td>
                 <td>
                     <a href="snake.html">
+                        <img src="snake.png">
                         <p>Snake</p>
                     </a>
                 </td>
@@ -84,6 +85,7 @@
                 </td>
                 <td>
                     <a href="breakout.html">
+                        <img src="breakout.png">
                         <p>Breakout</p>
                     </a>
                 </td>
