--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <p>
                     We decided to look into JavaScript and HTML and began to work on an arcade-themed website.
                     Our site offers a selection of simple games to play whenever you want.
-                    We currently have a roster of 6 games: Atari Breakout, Conway's Game of Life, Hangman, Minesweeper, Pong, and Snake.
+                    The site is also static, so you can download the games to play offline by cloning the repository on GitHub.
                 </p>
                 <p>
                     All of our work is written in JavaScript, HTML, CSS, and XML using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. 
@@ -42,7 +42,7 @@
                     </p>
                     <p>
                         Stanley also spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
-                        At time of writing, he has a rating of 2107 of CodeForces (flex). His account is <a href="https://codeforces.com/profile/qpwoeirut">here</a>.
+                        At time of writing, he has a rating of 2107 of CodeForces. His account is <a href="https://codeforces.com/profile/qpwoeirut">here</a>.
                     </p>
                     <p>
                         Jonathan also works on miscellaneous projects in a number of different languages, as well as some computer science contests on CodeForces and other sites.
