--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container">
         <h1 id="pageTitle">Welcome to qpwoeirut.com!</h1>
         <p style="margin-left: 35px; margin-right: 35px;">
-            Here you can find a selection of fun arcade games to play whenever you want.
+            Here you can find a selection of fun arcade games to play both <a href="">offline</a> and online.
             All of the projects are written using JavaScript and HTML, so there is no need for Adobe Flash Player.
             If you have any questions or comments for us, see the <a href="contact.html">Contact Us</a> page or visit the <a href="https://github.com/qpwoeirut/GamesAndGadgets">project repository</a> on Github.
             Feel free to submit an <a href="https://github.com/qpwoeirut/GamesAndGadgets/issues">issue or concern</a> as well.
