changed some of the text

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p style="margin-left: 35px; margin-right: 35px;">
             Here you can find a selection of fun arcade games to play both <a href="">offline</a> and online.
             All of the projects are written using JavaScript and HTML, so there is no need for Adobe Flash Player.
-            If you have any questions or comments for us, see the <a href="contact.html">Contact Us</a> page or visit the <a href="https://github.com/qpwoeirut/GamesAndGadgets">project repository</a> on Github.
+            If you have any questions or comments for us, see the <a href="contact.html">Contact Us</a> page or visit the <a href="https://github.com/qpwoeirut/GamesAndGadgets">project repository</a> on GitHub.
             Feel free to submit an <a href="https://github.com/qpwoeirut/GamesAndGadgets/issues">issue or concern</a> as well.
         </p>
         <br>
