--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <p>
             Both Stanley and Jonathan are also on Discord, but we both agree that most social media promotes general bad stuff and is really not great for society.
             Stanley is qpwoeirut#5057 on Discord and is also probably "qpwoeirut" on any other platform. (The name of this site is based off of his online username).
-            Jonathan is Jonathanu#9077 on Discord and usually goes by Jonathanu or JonathanUhler elsewhere online.
+            Jonathan is Jonathanu#9077 on Discord and usually goes by "Jonathanu" or "JonathanUhler" elsewhere online.
         </p>
 
     </div>
