--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <h1 id="pageTitle">About the Site</h1>
             <div class="container">
                 <p>
-                    qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan</a> and <a href="https://github.com/qpwoeirut">Stanley</a>. 
+                    qpwoeirut.com was created by <a href="https://github.com/JonathanUhler">Jonathan Uhler</a> and <a href="https://github.com/qpwoeirut">Stanley Zhong</a>. 
                     We are two high school students who are interested in computer science and programming.
                     The idea for this website came up during the COVID-19 pandemic, since we needed something to do during lockdown.
                 </p>
@@ -34,28 +34,40 @@
                     All of our work is written in JavaScript, HTML, CSS, and XML using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. 
                     The project repository can be found on GitHub <a href="https://github.com/qpwoeirut/GamesAndGadgets">here</a>.
                 </p>
-                <br><br>
-                <h2 class="center">About Us</h2>
-                <div>
-                    <p>
-                        We met as students in Bowman School and have kept in touch after graduation.
-                    </p>
-                    <p>
-                        Stanley also spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
-                        At time of writing, he has a rating of 2107 of CodeForces. His account is <a href="https://codeforces.com/profile/qpwoeirut">here</a>.
-                    </p>
-                    <p>
-                        Jonathan also works on miscellaneous projects in a number of different languages, as well as some computer science contests on CodeForces and other sites.
-                        Most of Jonathan's work can be found on GitHub.
-                    </p>
-                </div>
-                <div style="margin-top: 60px;">
-                    <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-                        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"/>
-                    </a>
+            </div>
+            <br><br>
+            <h2 class="center">About Us</h2>
+            <div class="container">
+                <p>
+                    We met as students in Bowman School and have kept in touch after graduation.
+                </p>
+                <p>
+                    Stanley spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
+                    At time of writing, he has a rating of 2107 of <a href="https://codeforces.com/profile/qpwoeirut">CodeForces</a>.
                     <br>
-                    This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
-                </div>
+                    He's also part of the <a href="https://ctftime.org/team/118163">RGBsec</a> CTF team, and specializes in cryptography.
+                </p>
+                <p>
+                    Jonathan works on miscellaneous projects in a number of different languages, as well as some computer science contests on CodeForces and other sites.
+                    Most of Jonathan's work can be found on GitHub.
+                </p>
+            </div>
+            <br><br>
+            <h2 id="offlinePlayTitle" class="center">How To Play Offline</h2>
+            <div class="container">
+                <p>
+                    Since this entire website is static, it can be downloaded and everything should still work.
+                    To download the website you can go to our repository on <a href="https://github.com/qpwoeirut/GamesAndGadgets">GitHub</a> and clone it.
+                    Then to play just open up the website file in your web browser.
+                </p>
+            </div>
+            <br><br>
+            <div class="container">
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+                    <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"/>
+                </a>
+                <br>
+                This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
     </body>
