changed some text

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 <p>
                     We decided to look into JavaScript and HTML and began to work on an arcade-themed website.
                     Our site offers a selection of simple games to play whenever you want.
-                    The site is also static, so you can download the games to play offline by cloning the repository on GitHub.
+                    The site is also static, so you can download the games to play offline by cloning the repository on <a href="https://github.com/qpwoeirut/GamesAndGadgets">GitHub</a>.
                 </p>
                 <p>
                     All of our work is written in JavaScript, HTML, CSS, and XML using <a href="https://code.visualstudio.com/">Visual Studio Code</a>. 
@@ -42,14 +42,14 @@
                     We met as students in Bowman School and have kept in touch after graduation.
                 </p>
                 <p>
-                    Stanley spends a lot of time doing competitve programming, including the USA Computing Olympiad and CodeForces.
+                    Stanley spends a lot of time doing competitive programming, including the USA Computing Olympiad and CodeForces.
                     At time of writing, he has a rating of 2107 of <a href="https://codeforces.com/profile/qpwoeirut">CodeForces</a>.
                     <br>
                     He's also part of the <a href="https://ctftime.org/team/118163">RGBsec</a> CTF team, and specializes in cryptography.
                 </p>
                 <p>
                     Jonathan works on miscellaneous projects in a number of different languages, as well as some computer science contests on CodeForces and other sites.
-                    Most of Jonathan's work can be found on GitHub.
+                    Most of Jonathan's work can be found on <a href="https://github.com/JonathanUhler">GitHub</a>.
                 </p>
             </div>
             <br><br>
