--- a/snake.html
+++ b/snake.html
@@ -24,8 +24,8 @@
 
 
         <div id="scoreContainer" class="center">
-            <p style="font-size: 20px;">Score: <span id="snakeScore">0</span></h2>
-            <p style="font-size: 20px;">Difficulty: <span id="snakeDifficulty">Normal</span></h3>
+            <button style="font-size: 20px; height: 45px; border: rgb(200, 200, 200); background-color: rgb(200, 200, 200); color: black;">Score: <span id="snakeScore">0</span></button>
+            <button style="font-size: 20px; height: 45px; border: rgb(200, 200, 200); background-color: rgb(200, 200, 200); color: black;">Difficulty: <span id="snakeDifficulty">Normal</span></button>
         </div>
         <br>
         <div id="gameContainer" class="center">
