--- a/bird.html
+++ b/bird.html
@@ -31,7 +31,7 @@
         </div>
     </body>
     <script src="bird.js"></script>
-    <script src="birdPopups.js"></script>
+    <!-- <script src="birdPopups.js"></script> -->
     <script>
         $("#navbarContainer").load("navbar.html");
     </script>
