--- a/2048.html
+++ b/2048.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="logger.js"></script>
     <script src="collapsible.js"></script>
+    <script src="grid.js"></script>
     <script src="2048.js"></script>
     <link rel="stylesheet" href="general.css">
     <link rel="stylesheet" href="clickable.css">
@@ -31,7 +32,8 @@
     $("#navbarContainer").load("navbar.html");
     
     addCollapsibleListeners();
-    fillBoard(4, 4);
+    var game = new Object();
+    startGame(game);
 </script>
 
 </html>
